# longclip-transformers

./: .gitignore  CONVERSION.md  MODEL_CARD.md  README.md  README_HUB.md  demo.py  long_clip_hf.py  pyproject.toml
SDXL/: SDXL_img2img.py  SDXL_pipeline.py  encode_prompt.py  sdxl.py
long_clip_hf/: __init__.py  configuration_longclip.py  modeling_longclip.py
longclip_original/: __init__.py  pyproject.toml
longclip_original/model/: __init__.py  longclip.py
scripts/: README.md  convert_longclip_to_hf.py  push_to_hub.py
src/longclip/: __init__.py  processing_longclip.py
tests/: __init__.py  test_baseline.py  test_configuration.py  test_integration.py  test_modeling_longclip.py  test_processor.py  test_tokenizer.py
tests/fixtures/: image_encoding_b.pkl  positional_embeddings_b.pkl  similarity_b.pkl  text_encoding_b.pkl  tokenization.pkl
