[project]
name = "long-clip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ftfy>=6.3.1",
    "huggingface-hub>=0.36.0",
    "pillow>=12.1.0",
    "pytest>=9.0.2",
    "regex>=2025.11.3",
    "setuptools>=80.9.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]

[tool.setuptools]
packages = ["long_clip_hf"]

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=6.0.0",
    "ruff>=0.1.5",
]
