[project]
name = "longclip"
version = "0.1.0"
description = "LongCLIP: Unlocking the Long-Text Capability of CLIP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["transformers[torch,torch-vision]>=4.57.3"]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[project.optional-dependencies]
original = ["ftfy>=6.3.1", "setuptools>=80.9.0"]
train = ["clip>=0.2.0"]
sdxl = ["diffusers[torch]>=0.36.0"]

[dependency-groups]
dev = ["mypy>=1.0.0", "pytest>=9.0.2", "ruff>=0.1.5"]
original = ["longclip-original"]

[tool.uv.sources]
longclip-original = { path = "./longclip_original" }
