[project]
name = "longclip-original"
version = "0.1.0"
description = "Original LongCLIP implementation (baseline for testing)"
requires-python = ">=3.11"
dependencies = [
    "ftfy>=6.3.1",
    "pillow>=12.1.0",
    "regex>=2025.11.3",
    "setuptools>=70.0.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.setuptools.packages.find]
where = ["."]
